[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Bank.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Test.gd" type="Script" id=2]

[node name="Test" type="Node2D"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGround" type="ColorRect" parent="Control"]
margin_right = 1029.0
margin_bottom = 607.0
mouse_filter = 2
color = Color( 0.0470588, 0.156863, 0.239216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SizeSelector" type="ItemList" parent="Control"]
margin_left = 64.3019
margin_top = 176.0
margin_right = 179.302
margin_bottom = 257.0
items = [ "Large (3 pips)", null, false, "Medium (2 pips)", null, false, "Small (1 pip)", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorSelector" type="ItemList" parent="Control"]
margin_left = 199.407
margin_top = 176.0
margin_right = 269.407
margin_bottom = 257.0
items = [ "Green", null, false, "Yellow", null, false, "Red", null, false, "Blue", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TakeButton" type="Button" parent="Control"]
margin_left = 292.0
margin_top = 177.0
margin_right = 365.0
margin_bottom = 197.0
text = "Take Ship"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PutBackButton" type="Button" parent="Control"]
margin_left = 292.0
margin_top = 231.688
margin_right = 390.0
margin_bottom = 251.688
text = "Put Back Ship"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddStarSystem" type="Button" parent="Control"]
margin_left = 409.699
margin_top = 202.043
margin_right = 517.699
margin_bottom = 222.043
text = "AddStarSystem"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddShipToStar" type="Button" parent="Control"]
margin_left = 546.639
margin_top = 199.798
margin_right = 712.639
margin_bottom = 219.798
text = "Add Ship To Star System"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextTurnButton" type="Button" parent="Control"]
margin_left = 913.67
margin_top = 17.9336
margin_right = 987.67
margin_bottom = 37.9336
text = "Next Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerLabel" type="Label" parent="Control"]
margin_left = 773.977
margin_top = 22.653
margin_right = 813.977
margin_bottom = 36.653
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildButton" type="Button" parent="Control"]
margin_left = 940.963
margin_top = 56.3401
margin_right = 985.963
margin_bottom = 76.3401
text = "Build"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bank" parent="." instance=ExtResource( 1 )]
position = Vector2( 20.1815, 24.386 )
[connection signal="button_up" from="Control/TakeButton" to="." method="_on_TakeButton_button_up"]
[connection signal="button_up" from="Control/PutBackButton" to="." method="_on_PutBackButton_button_up"]
[connection signal="button_up" from="Control/AddStarSystem" to="." method="_on_AddStarSystem_button_up"]
[connection signal="button_up" from="Control/AddShipToStar" to="." method="_on_AddShipToStar_button_up"]
[connection signal="button_up" from="Control/NextTurnButton" to="." method="_on_NextTurnButton_button_up"]
[connection signal="button_up" from="Control/BuildButton" to="." method="_on_BuildButton_button_up"]
